mockserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: mockserver
    meta.helm.sh/release-namespace: mockserver
  labels:
    app: mockserver
    app.kubernetes.io/managed-by: Helm
    chart: mockserver-5.14.0
    release: mockserver
  name: mockserver
  namespace: mockserver
spec:
  clusterIP: 10.96.7.142
  ports:
  - port: 80
    protocol: TCP
    targetPort: serviceport
  selector:
    app: mockserver
    release: mockserver
  sessionAffinity: None
  type: LoadBalancer
